--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
         "@tailwindcss/typography": "^0.5.0",
         "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
+        "daisyui": "^3.9.4",
+        "flowbite": "^2.0.0",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
